--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "devDependencies": {
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0"
-  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "request": "^2.75.0",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   },
   "name": "vstswebhoookstransformerforoffice365",
   "scripts": {
