--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,8 @@
         "module": "commonjs",
         "sourceMap": true,
         "outDir": "dist"
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
