Update to support images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,11 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "files.exclude": {
-        "**/*.js": {
+        "scripts/*.js": {
             "when": "$(basename).ts"
         },
-        "**/*.js.map": {
-            "when": "$(basename).ts"
-        },
+        "scripts/*.map": true,
         "node_modules": true,
-        "dist": true,
         "*.gitignore": true
     }
 }
