--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "module": "commonjs",
-        "sourceMap": true,
-        "outDir": "dist"
+        "sourceMap": true
     },
     "exclude": [
         "node_modules"
